--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width : 345px) and (max-width : 767px){
+@media only screen and (min-width : 345px) and (max-width : 640px){
     .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
     position: absolute;
@@ -15,4 +15,7 @@
     float: right;
     display: block;
   }
+  .cards{
+    width : 100% !important;
+}
 }
