--- a/css/style.css
+++ b/css/style.css
@@ -32,9 +32,7 @@ li{
 	line-height:0;
 	visibility:hidden;
 }
-body{
-	background: url(../images/testimonials-bg.jpg) no-repeat;
-}
+
 .btn {
 	background: url(../images/bg-button.png) no-repeat;
 	background-position: 0 -70px;
@@ -491,6 +489,7 @@ html,body {
 /*------------------------------ Cards ------------------------------*/
 .cards{
 	margin: 10px;
+	width : 28% !important;
 }
 .card{
     border-radius: 4px;
@@ -510,6 +509,7 @@ html,body {
 
 .card h3{
   font-weight: 600;
+  font-size: 24px;
 }
 
 .card img{
@@ -560,11 +560,26 @@ html,body {
  .cards-layout{
 	display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: row;
+
 }
  main{
 	padding: 0px !important;
+ }
+ .infodales-heading{
+	text-align: center;
+	font-weight: 700;
+	font-size: 28px;
+	color: #ffffff;
+	margin: 20px 0;
+ }
+ .infodales-text{
+	text-align: center;
+	font-weight: 400;
+	font-size: 18px;
+	color: #ffffff;
+	margin
  }
  @media(max-width: 990px){
   .card{
@@ -572,3 +587,273 @@ html,body {
 	
   }
 } 
+/*------------------------------ new Cards ------------------------------*/
+*/
+.blockquote-custom {
+  position: relative;
+  font-size: 1.1rem;
+}
+
+.blockquote-custom-icon {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  top: -25px;
+  left: 50px;
+}
+
+	.arrow {
+		content: "\2192";
+	  }
+	  .infodales-bios-card{
+		display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+	
+	  }
+
+	
+	  
+	  .left_50 {
+		width: 600px;
+		margin: 0 auto;
+		background-color: #fff;
+		margin-top: 10%;
+	  }
+	  
+	  #owl-example {
+		border: 1px solid #512da8;
+	  }
+	  
+	  .owl-nav {
+		position: absolute;
+		top: calc(50% - 21px);
+		width: 107%;
+		left: -21px;
+	  }
+	  
+	  .owl-nav div {
+		position: absolute;
+		top: 50%;
+		border: 1px solid #512da8;
+		width: 40px;
+		height: 40px;
+		border-radius: 50%;
+	  }
+	  
+	  .owl-prev {
+		left: 0;
+		display: flex;
+		background: #fff;
+	  }
+	  
+	  .owl-next {
+		right: 0;
+		display: flex;
+		background: #fff;
+	  }
+	  
+	  .owl-prev i,
+	  .owl-next i {
+		margin: auto;
+	  }
+	  
+	  #owl-example .owl-item {
+		box-sizing: border-box;
+		padding: 40px;
+		text-align: center;
+	  }
+	  
+	  #owl-example .owl-item p {
+		font-size: 16px;
+	  } 
+	  
+	  .mt-20{
+		margin-top:10px;
+	  }
+	  
+	  .name{
+			font-size: 16px;
+				color: #5130a8;
+	  }
+	  .infodales-model-popup{
+		width:960px;
+		right: 220px;
+		opacity: 1;
+	  }
+	  infodales-banner-contact{
+		height: 440px;
+	  }
+/*-----------------------------contact us----------------------------------------*/
+
+* {
+	margin:0px;
+	padding:0px;
+}
+*, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing:border-box; -o-box-sizing:border-box; box-sizing: border-box; }
+
+.clearfix:before, .clearfix:after { display: table; content: ''; }
+.clearfix:after { clear: both; }
+
+
+
+
+input:focus, textarea:focus, keygen:focus, select:focus {
+	outline: none;
+}
+::-moz-placeholder {
+	color: #666;
+	font-weight: 300;
+	opacity: 1;
+}
+
+::-webkit-input-placeholder {
+	color: #666;
+	font-weight: 300;
+}
+
+
+/* Contact Form Styling */
+.container {
+	padding: 0 50px 70px;
+}
+.textcenter {
+	text-align: center;
+}
+.section1 {
+	text-align: center;
+	display: table;
+	width: 100%;
+}
+.section1 .shtext {
+	display: block;
+	margin-top: 20px;
+}
+.section1 .seperator {
+	border-bottom:1px solid #a2a2a2;
+	width: 35px;
+	display: inline-block;
+	margin: 20px;
+}
+
+.section1 h1 {
+	font-size: 40px;
+	color: #A44DD8;
+	font-weight: normal;
+}
+
+.section2 {
+    width: 100%;
+    margin: 25px auto;
+}
+.section2 .col2 {
+	width: 48.71%;
+}
+.section2 .col2.first {
+	float: left;
+}
+.section2 .col2.last {
+	float: right;
+}
+.section2 .col2.column2 {
+	padding: 0 30px;
+}
+.section2 span.collig {
+	color: #a2a2a2;
+	margin-right: 10px;
+	display: inline-block;
+}
+.section2 .sec2addr {
+	display: block;
+	line-height: 26px;
+}
+.section2 .sec2addr p:first-child {
+	margin-bottom: 10px;
+}
+.section2 .sec2contactform input[type="text"], 
+.section2 .sec2contactform input[type="email"],
+.section2 .sec2contactform textarea {
+    padding: 18px;
+    border: 0;
+    background: #EDEDED;
+    margin: 7px 0;
+}
+.section2 .sec2contactform textarea {
+	width: 100%;
+	display: block;
+	color: #666;
+  resize:none;
+}
+.section2 .sec2contactform input[type="submit"] {
+	padding: 15px 40px;
+    color: #fff;
+    border: 0;
+    background: #A44DD8;
+    font-size: 16px;
+    text-transform: uppercase;
+    margin: 7px 0;
+    cursor: pointer;
+}
+.section2 .sec2contactform h3 {
+	font-weight: normal;
+    margin: 20px 0;
+    margin-top: 30px;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 19px;
+    color: #A44DD8;
+}
+
+/* @media querries */
+
+@media only screen and (max-width: 1266px) {
+	.section2 {
+		width: 100%;
+	}
+}
+@media only screen and (max-width: 960px) {
+	.container {
+		padding: 0 30px 70px;
+	}
+	.section2 .col2 {
+		width: 100%;
+		display: block;
+	}
+	.section2 .col2.first {
+		margin-bottom: 10px;
+	}
+	.section2 .col2.column2 {
+		padding: 0;
+	}
+	body .sec2map {
+		height: 250px !important;
+	}
+}
+@media only screen and (max-width: 768px) {
+	.section2 .sec2addr {
+		font-size: 14px;
+	}
+	.section2 .sec2contactform h3 {
+		font-size: 16px;
+	}
+	.section2 .sec2contactform input[type="text"], .section2 .sec2contactform input[type="email"], .section2 .sec2contactform textarea {
+		padding: 10px;
+		margin:3px 0;
+	}
+	.section2 .sec2contactform input[type="submit"] {
+		padding: 10px 30px;
+		font-size: 14px;
+	}
+}
+@media only screen and (max-width: 420px) {
+	.section1 h1 {
+		font-size: 28px;
+	}	
+}
+
+
+
+
