--- a/css/style.css
+++ b/css/style.css
@@ -498,7 +498,8 @@ html,body {
       transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
   padding: 14px 80px 18px 36px;
   cursor: pointer;
-  max-height: 228px;
+  height: 300px;
+  max-height: 300px;
 
 }
 
@@ -559,9 +560,9 @@ html,body {
  }
  .cards-layout{
 	display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex-wrap: nowrap;
     flex-direction: row;
+    justify-content: space-evenly;
 
 }
  main{
