--- a/css/style.css
+++ b/css/style.css
@@ -488,11 +488,11 @@ html,body {
 }
 /*------------------------------ Cards ------------------------------*/
 .cards{
-	margin: 10px;
+	margin: 20px;
 	width : 28% !important;
 }
 .card{
-    border-radius: 4px;
+    border-radius: 10px;
     background: #fff;
     box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
       transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
@@ -573,7 +573,7 @@ html,body {
 	font-weight: 700;
 	font-size: 28px;
 	color: #ffffff;
-	margin: 20px 0;
+	padding: 20px 0;
  }
  .infodales-text{
 	text-align: center;
@@ -719,9 +719,7 @@ input:focus, textarea:focus, keygen:focus, select:focus {
 
 
 /* Contact Form Styling */
-.container {
-	padding: 0 50px 70px;
-}
+
 .textcenter {
 	text-align: center;
 }
@@ -854,7 +852,187 @@ input:focus, textarea:focus, keygen:focus, select:focus {
 		font-size: 28px;
 	}	
 }
+.infodales-container-wrapper{
+	padding: 40px 0;
+}
+.infodales-carousal-quotes{
+	margin: 40px 60px;
+	padding-bottom: 0 !important;
+}
+.carousel-control{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    font-size: 20px;
+    color: #fff;
+    text-align: center;
+    text-shadow: 0 1px 2px rgb(0 0 0 / 30%);
+   
+  
+    opacity: 0.5 !important;
+}
+.carousel-control .icon-next, .carousel-control .icon-prev {
+    width: 44px;
+    /* height: 84px; */
+    /* margin-top: -10px; */
+    font-size: 60px;
+}
+.carousel-control .icon-next{
 
+	margin-top: -36px;
+	right: 100%;
+}
+.carousel-control .icon-prev {
+	left: 100%;
+}
+#myBtn {
+	display: block;
+	position: fixed;
+	bottom: 20px;
+	right: 30px;
+	z-index: 99;
+	font-size: 18px;
+	border: none;
+	outline: none;
+	background-color: #f99600;
+	color: white;
+	cursor: pointer;
+	padding: 15px;
+	border-radius: 30px;
+  }
+  
+  #myBtn:hover {
+	background-color: #555;
+  }
 
+.training-logo{
+	background-color: #ffffff;
+    border-radius: 25px;
+    /* padding-top: 20px; */
+    padding: 20px 4px;
+    margin-top: 25px;
+	height: 175px !important;
+}
+.training-logo > img{
+	width: 174px;
+    height: 133px;
+}
+.training-banner-header{
+	padding: 20px 0;
+	font-size: 36px;
+    font-weight: bold;
+    color: #fff;
+}
+.training-header{
+	margin-top: 25px;
+}
+.infodales-banner-training{
+	height: 300px;
+}
+.training-banner-summery > p{
+	font-size: 14px;
+    margin-bottom: 20px;
+    color: #fff;
+}
 
-
+  .infodales-training-summery{
+	font-size: 14px;
+    text-align: justify;
+  }
+.training-content-wrapper{
+	padding: 40px 0;
+}
+.infodales-training-overview{
+	font-weight: bold;
+	font-size: 28px;
+	padding: 20px 0;
+}
+.form-group{
+	padding: 15px 0;
+}
+.infodales-training-button{
+	padding: 12px 28px;
+	background-color: #4CAF50; /* Green */
+	border: none;
+	color: white;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+	align-self: center;
+	border-radius: 25px;
+}
+.infodales-center-button{
+	display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.training-form-container{
+	padding: 24px;
+}
+.cource-overview-img{
+	width: 300px;
+	height: 300px;
+}
+.training-content-right{
+	padding: 40px 0;
+}
+.training-form-container{
+	margin: 40px 0;
+}
+.training-topic-list {
+	padding-left: 40px;
+}
+.training-topic-list > li{
+	color: #000;
+	font-size: 14px;
+}
+.accordion-button:not(.collapsed) {
+	
+}
+.accordion-button:focus {
+	
+	border-color: #ffffff;
+	box-shadow: 0 0 0 0.25rem rgb(255 255 255);
+}
+.accordion-button::after {
+    flex-shrink: 0;
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-left: auto;
+    content: "";
+    background-image: url('../images/icon/plus.png');
+    background-repeat: no-repeat;
+    background-size: 1.25rem;
+    transition: transform .2s ease-in-out;
+}
+.accordion-button:not(.collapsed)::after {
+    background-image: url('../images/icon/minus.png');
+    
+}
+.infodales-collapsed-btn > h3{
+	font-weight: 600 !important;
+	line-height: 1.2;
+	margin-bottom: 0.5rem;
+	font-size: 16px!important;
+}
+.accordion-item:first-of-type .accordion-button {
+    border-top-left-radius: unset;
+    border-top-right-radius: unset
+}
+.training-divider-vertical{
+	border-left: 2px solid #e4dada;
+	height: 100%; 
+	margin-left: 30px;
+}
+.course-includes-icon{
+	height: 100px;
+	width: 100px;
+}
+.training-feature-text{
+	padding-top: 25px;
+}
