tablet and mobile view for aem page

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -18,4 +18,10 @@
   .cards{
     width : 100% !important;
 }
+.col-md-7,.col-sm-12{
+  padding : 40px;
+}
+.infodales-includes-mobile{
+  padding : 0 ;
+}
 }
