--- a/css/tablet.css
+++ b/css/tablet.css
@@ -17,4 +17,35 @@
     .training-divider-vertical{
         display: none;
     }
+    .training-logo {
+        background-color: #ffffff;
+        border-radius: 25px;
+        /* padding-top: 20px; */
+        padding: 28px 1px;
+        margin-top: 25px;
+        height: 175px !important;
+    }
+    .training-logo > img {
+        width: 115px;
+        height: 115px;
+    }
+    .infodales-banner-training{
+        padding : 0;
+    }
+    .navbar-toggler-icon {
+        display: inline-block;
+        vertical-align: middle;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 100%;
+        color: #ffffff;
+        background-color: #57c5e1;
+        border-radius: 6px;
+        width: 52px;
+        height: 47px;
+        left: 36px;
+    }
+    .navbar-nav {
+        padding-left: 30px;
+    }
     }
