--- a/css/style.css
+++ b/css/style.css
@@ -462,6 +462,15 @@ p a {
 	background-position: -40px -120px;
 }
 
+
+.aem-banner{
+	background: url(../images/banners/cityscape-5458913.jpg) repeat-x left;
+	height: 360px;
+	padding: 60px 0;
+	width: 100%;
+    
+}
+
 .infodales-banner{
 	background: url(../images/banners/business-3528035_1920.jpg) repeat-x left;
 	height: 360px;
