--- a/css/tablet.css
+++ b/css/tablet.css
@@ -48,4 +48,11 @@
     .navbar-nav {
         padding-left: 30px;
     }
+    .infodales-banner-service{
+        padding-left: 0px;
+    padding-right: 0px;
+    }
+    .mobile-hr{
+        display: block;
+    }
     }
