--- a/css/mobile.css
+++ b/css/mobile.css
@@ -171,4 +171,10 @@
    margin: unset;
   
 }
+.card-1, .card-2, .card-3, .card-4{
+  background-size: 120px;
+}
+.infodales-card-wrapper {
+  padding-right: 85px;
+}
 }
