--- a/css/mobile.css
+++ b/css/mobile.css
@@ -117,8 +117,9 @@
   padding-top: 40px;
   height: 300px;
 }
-.contact-img{
-  display: none;
+.contact-img {
+  display: flex;
+  margin-bottom: 45px;
 }
 .contact-form {
   background: #fff;
@@ -176,5 +177,11 @@
 }
 .infodales-card-wrapper {
   padding-right: 85px;
+}
+.row > .mb-30{
+  padding-left: 40px;
+}
+.address-card > .mb-30{
+  padding-left: 0;
 }
 }
