--- a/css/style.css
+++ b/css/style.css
@@ -1023,8 +1023,10 @@ input:focus, textarea:focus, keygen:focus, select:focus {
 	margin-left: 30px;
 }
 .course-includes-icon{
-	height: 100px;
-	width: 100px;
+	height: 50px;
+	width: 50px;
+	margin-top: 22px;
+    margin-left: 19px;
 }
 .training-feature-text{
 	padding-top: 25px;
