--- a/css/style.css
+++ b/css/style.css
@@ -1275,6 +1275,9 @@ ul {
 .google-bg{
   background: #DD4B39;
 }
+.footer-widget{
+	padding: 0 20px;
+}
 .footer-widget-heading h3 {
   color: #fff;
   font-size: 20px;
@@ -1370,6 +1373,30 @@ ul {
 }
 .single-cta{
 	display: flex;
+}
+.social-icon{
+	height: 30px;
+	width: 30px;
+	margin : 0 5px;
+}
+#myBtn-arrow {
+    display: block;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 88px;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 74px;
+}
+.arrow-icon{
+	height: 50px;
+	width: 50px;
 }
 
 
