--- a/style.css
+++ b/style.css
@@ -786,7 +786,7 @@ h3{
 	}
 	.facilities-col img{
 	width: 100%;
-	height: fit-content;
+	height: 100%;
 	border-radius: 10px;
 }
 .facilities-col{
@@ -1333,7 +1333,7 @@ padding: 50px 0 40px 0;
 		padding: 30px 0;
 	}
 	.tile-container {
-    border: 2px solid gray;
+    /* border: 2px solid gray; */
     box-shadow: 3px 3px 10px rgb(172, 172, 172);
 	border-radius: 10px;
     width: 100%;
