--- a/style.css
+++ b/style.css
@@ -2238,3 +2238,37 @@ td {
 code {
   color: #f3f0f0;
 }
+
+/* Vanity url Stylings */
+.firstImage {
+  width: 100%;
+  height: 50%;
+}
+.secondImage {
+  width: 50%;
+  height: 70%;
+  display: flex;
+  padding-top: 1%;
+}
+.thirdImage {
+  width: 80%;
+  height: 75%;
+  display: flex;
+}
+.snippetvanity {
+  padding-left: 20%;
+  /* height: 110px; */
+}
+
+@media (max-width: 900px) and (max-height: 1500px) {
+  .snippetvanity {
+    padding-left: 0% !important;
+    /* height: 110px; */
+  }
+  @media (max-height: 700px) {
+    .snippetvanity {
+      padding-left: 0% !important;
+      /* height: 110px; */
+    }
+  }
+}
