--- a/style.css
+++ b/style.css
@@ -2544,27 +2544,15 @@ details[open] .accordion-icon {
     height: 106em;
   }
 }
-/* osgi factory configuration*/
-.ff_ul {
-  list-style-type: none;
+/* Dispatcher Migration */
+.dispatcher-snippets {
+  display: flex;
+  justify-content: center;
   margin: 0;
-  padding: 0;
 }
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-pre {
-  background-color: #f5f5f5;
-  border: 1px solid #ddd;
-  padding: 10px;
-  overflow-x: auto;
-}
-li {
-  margin-bottom: 20px;
-}
-code {
-  overflow: scroll;
+.description-txt li p {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 22px;
+  padding: 5px !important;
 }
