--- a/style.css
+++ b/style.css
@@ -2591,3 +2591,10 @@ width: 100%;
 margin: 0px;
 padding-top: 5px;
 }
+
+/* Clientlibs, Content Fragments Experience Fragments*/
+@media (max-width: 700px) {
+  .smallscreenfull {
+      width: 100% !important;
+  }
+}
