--- a/style.css
+++ b/style.css
@@ -2540,10 +2540,19 @@ details[open] .accordion-icon {
   height: 106em;
 }
 
+pre .code-flow{
+  width: 80%;
+  height: 100%;
+}
+
 @media only screen and (max-width: 700px) {
   .prefill-service-pre {
     height: 106em;
   }
+  pre .code-flow{
+  width: 100% !important;
+  padding: 0 !important; 
+}
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .prefill-service-pre {
